Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127381

Unexpected shift-selection in QTreeView.

XMLWordPrintable

    • Windows
    • fb2d64bc5 (dev), 5c94c5a4e (6.8), 7f24bd1e1 (6.7), 47b90f68e (tqtc/lts-6.5), 7264514b1 (tqtc/lts-6.2)

      When using selectionModel()->setCurrentIndex() to move the anchor to another position, then pressing the Shift key and clicking on an index to select a range of data, the selected items are not as expected.

      To reproduce the issue:

      • Run the attached example project.
      •  Click  the index at 5.
      • Press cntrl + G , and enter 2 then click OK.
      • Press shift key and click index = 4.

       Expected outcome: select from 2~4.
      Actual outcome:  select  5 to 4.

      As a workaround, uncomment line 27 and comment out line 26 in main.cpp.

       

        For Gerrit Dashboard: QTBUG-127381
        # Subject Branch Project Status CR V

            kchehlarski Kaloyan Chehlarski
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: